change endpoint sync
+split sync by their domain
